# Eva-Template-Library

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: algorithm.hpp  allocator.hpp  config.hpp  iterator.hpp  memory.hpp  set_bits.hpp  type_traits.hpp  vector.hpp
src/: main.cpp
tests/: CMakeLists.txt  vector_test.cpp
